--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -9,6 +9,11 @@ jobs:
     - uses: actions/checkout@v4 
     - name: build image
       run: docker build ./api/ -t redrodeo/qr-cloud-api:latest
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: push image to docker hub
       run: |
         docker push redrodeo/qr-cloud-api:latest
