frontend and backend yaml

--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -6,9 +6,11 @@ jobs:
   publish_images:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4 
+    - uses: actions/checkout@v4   
     - name: build image
-      run: docker build ./api/ -t redrodeo/qr-cloud-api:latest
+      run: |
+        docker build ./api/ -t redrodeo/qr-cloud-api:latest
+        docker build ./front-end-nextjs/ -t redrodeo/qr-cloud-frontend:latest
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
@@ -17,3 +19,4 @@ jobs:
     - name: push image to docker hub
       run: |
         docker push redrodeo/qr-cloud-api:latest
+        docker push redrodeo/qr-cloud-frontend:latest
